@@ -90,7 +90,7 @@ FunctionsToExport = 'Add-FontsToBcContainer', 'Add-GitToAlProjectFolder',
                'Generate-SymbolsInNavContainer', 'Get-BCArtifactUrl', 
                'Get-BcContainerApiCompanyId', 'Get-BcContainerApp', 
                'Get-BcContainerAppInfo', 'Get-BcContainerAppRuntimePackage', 
-               'Convert-BcAppsToRuntimePackages', 
+               'Convert-BcAppsToRuntimePackages', 'Get-PlainText', 
                'Get-BcContainerArtifactUrl', 'Get-BcContainerBcUser', 
                'Get-BcContainerCountry', 'Get-BcContainerDebugInfo', 
                'Get-BcContainerEula', 'Get-BcContainerEventLog', 
